fix: Remove overlapping of sticky buttons [hotfix]

--- a/template/src/components/content/sticky-buttons/styles.less
+++ b/template/src/components/content/sticky-buttons/styles.less
@@ -41,6 +41,10 @@
 @media only screen and (min-width: 600px) {
 	.sticky {
 		margin-top: -300px;
+		width: 180px;
+		margin-left: calc(100% - 180px);
+		padding: 0px;
+		padding-right: 50px;
 	}
 
 	.second {
